fix: correct method call to retrieve thread ID in getThreadInfo